fixed scrollbar

--- a/src/redturtle/prenotazioni/browser/static/redturtle-reservation.css
+++ b/src/redturtle/prenotazioni/browser/static/redturtle-reservation.css
@@ -130,7 +130,7 @@ td.selected {
   box-sizing: border-box;
 }
 #week-table-wrapper {
-  overflow: scroll;
+  overflow: auto;
 }
 
 #week-table-wrapper .table-title {
